--- a/DemoApp/src/main/res/values/strings.xml
+++ b/DemoApp/src/main/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="title_simple_nav">Simple NavDrawer</string>
     <string name="title_double_nav">Double NavDrawer</string>
     <string name="title_fading_action_bar">Fading Action Bar</string>
+    <string name="title_vertical_card_list">Vertical card list</string>
+    <string name="title_horizontal_card_list">Horizontal card list</string>
 
     <string name="title_section_left_1">Section Left 1</string>
     <string name="title_section_left_2">Section Left 2</string>
